# ViRA-VLM

./: .gitignore  README.md  checklist.md  idea.md  pyproject.toml  requirements.txt  run_inference.sh  run_training.sh  test.ipynb
.history/: .gitignore_20250402144426  .gitignore_20250411220546
.history/data/: data_loader_20250325154345.py
LLaVA/fussion_modules/: Cross_Attention.py
LLaVA/model/: metrics.py
LLaVA/model/fussion_retrieval/: Cross_Attention.py  Retriever.py
LLaVA/model/language_model/: LLaVA_SeaLLM.py
LLaVA/model/vision_encoder_model/: EVA_Clip_02.py  eva-clip-02.py
LLaVA/stage1_description/: dataset.py  model.py  train.py
LLaVA/stage_1/: Captioning.py  Dataloader.py  train.py
configs/: configs.yaml
data/: data_loader.py  wiki_corpus_combine.py
models/attentions/: cross_attention.py  deep_fusion.py  fusion_block.py  self_attention.py
models/language_model/: qwen2_decoder_layer_with_attn.py  seallms.py
models/vision_encoder/: eva_clip.py
modules/: wiki_processor.py
report/references/: doc_sample.txt
retrieval_vlm/configs/: configs.py
retrieval_vlm/model/: metrics.py
retrieval_vlm/model/attention/: cross_attention.py
retrieval_vlm/model/embedding_model/: sentence_transformers.py
retrieval_vlm/stage1_description/: main.py
retrieval_vlm/stage2_VQA/: dataset.py
stage1_description/: inference.py  train.py
stage1_description/dataset/: dataset_cleaning.py  description_dataset.py
stage1_description/model/: description_model.py
stage1_description/utils/: data_collator.py  metrics.py  utils.py
(+141 files in other folders)
