[project]
name = "vi-vlm"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "faiss-cpu (>=1.11.0,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pyvi (>=0.1.1,<0.2.0)",
    "py-vncorenlp (>=0.1.4,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
